--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /code
 COPY ./requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 COPY ./app code/app
-EXPOSE 8085
-CMD ["fastapi", "run", "app/main.py", "--port", "8085"]
+EXPOSE 80
+CMD ["fastapi", "run", "code/app/main.py", "--port", "80"]
