--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: source
     ports:
-      - '5432:5432'
+      - '5434:5434'
     volumes:
       - db_data_source:/var/lib/postgresql/data
     
@@ -25,6 +25,16 @@ services:
         - '5433:5433'
       volumes:
         - db_data_destination:/var/lib/postgresql/data
+
+  api-source:
+      build:
+        context: ./api
+        dockerfile: Dockerfile
+      ports:
+        - "8085:80"
+      depends_on: 
+        - db-source
+
         
 volumes:
   db_data_source:
