--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,12 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_SOURCE_DB}
-    #TODO: Remova na versão final
-    ports:
-      - '5434:5432' 
+    # ports:
+    #   - '5434:5432' 
     volumes:
       - db_data_source:/var/lib/postgresql/data
     networks:
-      - app-network
+      - app_network
   db-destination:
       image: postgres:15.3-alpine
       container_name: postgres_db_destination
@@ -28,19 +27,21 @@ services:
       volumes:
         - db_data_destination:/var/lib/postgresql/data
       networks:
-      - app-network
+        - app_network
   api-service:
       build:
         context: ./api
         dockerfile: Dockerfile
+      container_name: api_service
       environment:
         - DB_SOURCE_URL=${DB_SOURCE_URL}
       ports:
         - "8085:80"
       depends_on: 
         - db-source
+        - db-destination
       networks:
-        - app-network
+        - app_network
   db-dagster:
     image: postgres:11
     container_name: db_dagster
@@ -49,7 +50,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB_DAGSTER}
     networks:
-      - app-network
+      - app_network
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U postgres_user -d postgres_db']
       interval: 10s
@@ -59,15 +60,19 @@ services:
     build:
       context: ./etl
       dockerfile: ./Dockerfile_user
+    image: etl_code_image
     container_name: etl_code
     restart: always
+    depends_on:
+      - db-destination
     environment:
       DAGSTER_POSTGRES_USER: ${POSTGRES_USER}
       DAGSTER_POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       DAGSTER_POSTGRES_DB: ${POSTGRES_DB_DAGSTER}
       DAGSTER_CURRENT_IMAGE: etl_code_image
+      DB_DESTINATION_URL: ${DB_DESTINATION_URL}
     networks:
-      - app-network
+      - app_network
 
   etl-code-webserver-service:
     build:
@@ -94,12 +99,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/io_manager_storage:/tmp/io_manager_storage
     networks:
-      - app-network
+      - app_network
     depends_on:
-      db-dagster:
-        condition: service_healthy
-      etl-code-service:
-        condition: service_started
+      - db-destination
+      - db-dagster
+      - etl-code-service
   etl-daemon-service:
     build:
       context: ./etl
@@ -117,17 +121,17 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/io_manager_storage:/tmp/io_manager_storage
     networks:
-      - app-network
+      - app_network
     depends_on:
-      db-dagster:
-        condition: service_healthy
-      etl-code-service:
-        condition: service_started
+      - db-destination
+      - db-dagster
+      - etl-code-service
 
 volumes:
   db_data_source:
   db_data_destination:
 
 networks:
-  app-network:
+  app_network:
     driver: bridge
+    name: app_network
