--- a/etl/Dockerfile_dagster
+++ b/etl/Dockerfile_dagster
@@ -1,5 +1,8 @@
 FROM python:3.10-slim
 
+RUN apt-get update && apt-get install -y \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
 RUN pip install \
     dagster \
     dagster-graphql \
@@ -7,6 +10,7 @@ RUN pip install \
     dagster-postgres \
     dagster-docker
 
+# Set $DAGSTER_HOME and copy dagster instance and workspace YAML there
 ENV DAGSTER_HOME=/opt/dagster/dagster_home/
 
 RUN mkdir -p $DAGSTER_HOME
