--- a/etl/workspace.yaml
+++ b/etl/workspace.yaml
@@ -2,4 +2,4 @@ load_from:
   - grpc_server:
       host: etl_code
       port: 4000
-      location_name: "example_user_code"
+      location_name: "user_code"
