fix: env example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-POSTGRES_USER=user
-POSTGRES_PASSWORD=pass
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=admin
 
-POSTGRES_SOURCE_DB=source
-POSTGRES_DESTINATION_DB=destination
+POSTGRES_SOURCE_DB=source_db
+DB_SOURCE_URL=      postgresql+psycopg://postgres:admin@postgres_db_source:5432/source_db
 
-DB_SOURCE_URL=      postgresql+psycopg://user:pass@source:5432/db_name
-DB_DESTINATION_URL= postgresql+psycopg://user:pass@dest:5432/db_name
+POSTGRES_DESTINATION_DB=destination_db
+DB_DESTINATION_URL= postgresql+psycopg://postgres:admin@postgres_db_destination:5432/destination_db
+
+POSTGRES_DB_DAGSTER=setup_dagster
